adicionado sistema de vault de senhas

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">PasswordGenerator</string>
+    <string name="adicione_a_senha">Adicione a Senha</string>
+    <string name="entre_com_a_senha">Entre com a senha</string>
 </resources>
